# unccord-bot-go

./: .env  .env.example  .gitignore  Dockerfile  README.md  application.yml  bot.py  constants.py  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml
.devcontainers/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yaml  ci.yml  deploy-prod.yml  deploy-staging.yml  docker-deploy.yml  issue_assign.yml
SQL/: starboard-ddl.sql
cmd/: main  main.go
config/: config.go  db.go
handlers/: colors.go  handlers.go  message_handler.go  music_handler.go  slash_commands.go  starboard.go  starboard_handlers.go  voice_handler.go
internal/: util.go  util_test.go
queue/: queue.go
uncord-bot-go/: go.mod  go.sum
uncord-bot-go/cmd/: main.go
uncord-bot-go/config/: config.go  config_test.go  db.go  db_test.go
uncord-bot-go/handlers/: handlers.go  message_handler.go  music_handler.go  slash_commands.go  starboard_handlers.go
uncord-bot-go/internal/: util.go
uncord-bot-go/lavalink/: client.go
uncord-bot-go/queue/: queue.go
